Remove line height to fix comment input scrollbar

--- a/webapp/review/style.less
+++ b/webapp/review/style.less
@@ -86,7 +86,6 @@
   resize: none;
   padding: 8px;
   font-size: @font-s;
-  line-height: inherit;
 
   &:focus {
     outline: none;
